--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,15 @@
 <h1>
   {{title}}
 </h1>
+<header>
+<nav>
+  <a routerLink="/">Home</a>
+  <br>
+  <a routerLink="/movies">Movie</a>
+  <br>
+  <!-- <a routerLink="/contact-us">Contact Us</a> -->
+  <br>
+</nav>
+</header>
+
+<router-outlet></router-outlet>
